# system-on-a-business-card

./: .gitignore  README.md
.github/workflows/: publish_dev_container.yaml  publish_dev_container.yml
Arduino/SpaceTrash/: platformio.ini
Arduino/SpaceTrash/src/: SpaceTrash.ino
KiCAD/doc/: README.md
KiCAD/libraries/: Prj_Memory_Flash.kicad_sym  Prj_MosFET.kicad_sym  Prj_antenna.kicad_sym  Prj_audio_dac.kicad_sym  dcdc_converter.kicad_sym  touch_sensors.kicad_sym
KiCAD/system-on-a-business-card/: audio_circuti.kicad_sch  capacitive_touch_circuit.kicad_sch  display_circuit.kicad_sch  fp-lib-table  host.kicad_sch  ibom.config.ini  power_circuit.kicad_sch  resistive_touch_circuit.kicad_sch  sd_card.kicad_sch  sym-lib-table  system-on-a-business-card.kicad_pcb  system-on-a-business-card.kicad_prl  system-on-a-business-card.kicad_pro  system-on-a-business-card.kicad_sch  ~system-on-a-business-card.kicad_sch.lck
KiCAD/system-on-a-business-card/bom/: ibom.html  ibom_rev_1_0_0.html
Zephyr/board_test/: prj.conf
Zephyr/board_test/app/: CMakeLists.txt  prj.conf
Zephyr/board_test/drivers/: Kconfig
Zephyr/board_test/lib/: CMakeLists.txt
Zephyr/board_test/src/: main.c
Zephyr/dev-env/: Dockerfile  open_dev_env_shell.sh
Zephyr/minimal/: prj.conf
Zephyr/minimal/src/: main.c
Zephyr/workspace/space_trash/: CMakeLists.txt  prj.conf
Zephyr/workspace/space_trash/inc/: controls.h  game.h  graphics.h  images.h  nvm.h  space_trash.h
Zephyr/workspace/space_trash/src/: buttons.c  controls.c  display.c  game.c  graphics.c  images.c  main.c  nvm.c  space_trash.c
(+39 files in other folders)
